<resources>
    <string name="app_name">EVShop</string>
    <string name="title_evshop">EVShop</string>
    <string name="hint_search">Tìm xe, hãng, mẫu…</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_search">Tìm kiếm</string>
    <string name="menu_filter">Lọc/Sắp xếp</string>
    <string name="chip_all">Tất cả</string>
    <string name="chip_city">City</string>
    <string name="chip_sport">Sport</string>
    <string name="chip_offroad">Off-road</string>
    <string name="chip_eco">Eco</string>
    <string name="label_popular">Phổ biến</string>
    <string name="label_price_asc">Giá ↑</string>
    <string name="label_price_desc">Giá ↓</string>
    <string name="label_rating">Đánh giá</string>
    <string name="btn_retry">Thử lại</string>
    <string name="empty_list">Không có sản phẩm phù hợp</string>
    <string name="error_list">Có lỗi xảy ra</string>
    <string name="pull_refresh">Kéo để làm mới</string>
    <string name="sheet_title">Lọc &amp; Sắp xếp</string>
    <string name="sheet_sort">Sắp xếp</string>
    <string name="sheet_filter">Bộ lọc</string>
    <string name="filter_brand">Hãng</string>
    <string name="filter_price">Giá</string>
    <string name="filter_rating">Đánh giá tối thiểu</string>
    <string name="apply">Áp dụng</string>
    <string name="cancel">Hủy</string>
    <string name="banner_promotion">Banner khuyến mãi</string>
    <string name="product_picture">Ảnh sản phẩm</string>
    <string name="star_vote">Sao đánh giá</string>
    <string name="banner">Banner</string>
    
    <!-- User Actions -->
    <string name="cart">Giỏ hàng</string>
    <string name="account">Tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="notify_login_or_register">Đăng nhập hoặc Đăng ký để mua nhanh hơn</string>
    
    <string name="welcome">Xin chào, Quý Khách</string>
    <string name="view_map">Bản đồ</string>
    <string name="tts_guide">tts_guide\n</string>
    <string name="featured_vehicles_title">Xe Nổi Bật</string>
    <string name="vehicle_name_unavailable">Tên xe không có sẵn</string>
    <string name="avatar">Avatar</string>
    <string name="send">Send</string>
</resources>